--- a/Bag_of_Words.ipynb
+++ b/Bag_of_Words.ipynb
@@ -3,26 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Q1"
-      ],
-      "metadata": {}
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "<img src=\"ML2_HW5_Q1.jpeg\">"
-      ],
-      "metadata": {
-        "ExecuteTime": {
-          "end_time": "2019-02-27T01:49:08.809966Z",
-          "start_time": "2019-02-27T01:49:08.804347Z"
-        }
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Q2"
+        "## Model  y > $x^2$ as positive and y <= $x^2$ as negative"
       ],
       "metadata": {}
     },
