--- a/Collaborative_Filtering.ipynb
+++ b/Collaborative_Filtering.ipynb
@@ -106,24 +106,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Collaborative Filtering with Gradient Descent \n",
-        "\n",
-        "In this part of the assignment you will build a collaborative filtering model to predict netflix ratings.  This assignment will step you through how to do this using stochastic gradient descent. The data for this assignment is ...\n",
-        "\n",
-        "**Instructions:**\n",
-        "- Do not use loops (for/while) in your code, unless the instructions explicitly ask you to do so.\n",
-        "- DO NOT change paths (-3 points)\n",
-        "- DO NOT submit data to github (-2 points)\n",
-        "\n",
-        "**You will learn to:**\n",
-        "- Build the general architecture of a learning algorithm, including:\n",
-        "    - Encoding rating data\n",
-        "    - Initializing parameters\n",
-        "    - Calculating the cost function\n",
-        "    - Calculating gradient\n",
-        "    - Using an optimization algorithm (gradient descent) \n",
-        "    - Predicting on new data\n",
-        "- Putting it all together."
+        "# Collaborative Filtering with Gradient Descent "
       ],
       "metadata": {
         "deletable": false,
@@ -1250,7 +1233,7 @@
       "cell_type": "markdown",
       "source": [
         "## Predicting on new data\n",
-        "Now we should write a function that given new data is able to predict ratings. First we write a function that encodes new data. If a new user or item is present that row should be remove. Collaborative Filtering is not good at handling new users or new items. To help with this task, you could write a an auxiliary function similar to `proc_col`."
+        "Now we should write a function that given new data is able to predict ratings. First we write a function that encodes new data. If a new user or item is present that row should be remove. Collaborative Filtering is not good at handling new users or new items."
       ],
       "metadata": {
         "deletable": false,
