--- a/Collaborative_filtering.ipynb
+++ b/Collaborative_filtering.ipynb
@@ -426,7 +426,7 @@
    "source": [
     "## Matrix Factorization with bias\n",
     "We want to extend the Matrix Factorization model discussed with a \"bias\" parameter for each user and another \"bias\" parameter for each movie.  <br>\n",
-    "For the problem in class we had the parameters matrix $U$ and $V$, we are adding $u_0$ which is a vector of dimension $n_u$ and $v_0$ which is a vector of dimension $n_m$. The equations\n",
+    "Along with the parameters matrix $U$ and $V$, we are adding $u_0$ which is a vector of dimension $n_u$ and $v_0$ which is a vector of dimension $n_m$. The equations\n",
     "\n",
     "$$\\hat{y}_{ij} = u_{0i} + v_{0j} + u_i \\cdot v_j  $$ \n",
     " \n",
@@ -745,17 +745,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 171,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-06-15T01:17:24.951814Z",
-     "start_time": "2019-06-15T01:17:24.881515Z"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "avg_ratings = df_train.groupby('movieId').mean()['rating'].to_dict()"
+    "#### Visualizing the movie embeddings with tsne"
    ]
   },
   {
@@ -770,11 +763,7 @@
    "outputs": [],
    "source": [
     "movies = pd.read_csv('ml-latest-small/movies.csv')\n",
-    "movies['id'] = movies.movieId.apply(lambda x: movieId2idx[x] if x in movieId2idx else -1)\n",
-    "movies['avg_rating'] = movies.id.apply(lambda x: avg_ratings[x] if x in avg_ratings else -1)\n",
-    "movies['rating_bin'] = pd.cut(movies['avg_rating'],5,labels=[0,1,2,3,4])\n",
-    "color_mapping = {0:'black', 1:'darkred', 2: 'darkseagreen', 3:'orange', 4:'lightblue'}\n",
-    "movies['color'] = movies['rating_bin'].apply(lambda x: color_mapping[x])"
+    "movies['id'] = movies.movieId.apply(lambda x: movieId2idx[x] if x in movieId2idx else -1)"
    ]
   },
   {
@@ -788,35 +777,7 @@
    },
    "outputs": [],
    "source": [
-    "titles = movies.title[movies.id.isin(df_train.movieId.unique())]\n",
-    "rating_bin = movies.rating_bin[movies.id.isin(df_train.movieId.unique())]\n",
-    "colors = movies.color[movies.id.isin(df_train.movieId.unique())]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 174,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-06-15T01:17:26.162284Z",
-     "start_time": "2019-06-15T01:17:26.157626Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Counter({4: 2617, 3: 4524, 2: 1572, 1: 285})"
-      ]
-     },
-     "execution_count": 174,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from collections import Counter\n",
-    "Counter(rating_bin)"
+    "titles = movies.title[movies.id.isin(df_train.movieId.unique())]"
    ]
   },
   {
@@ -1444,13 +1405,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   },
   "toc": {
+   "base_numbering": 1,
    "nav_menu": {},
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": "block",
